--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ a {
     text-decoration: none;
     color: rgb(100, 200, 0);
     border-left: 2px solid white;
+}
+
+#special {
+    padding: 5px;
+    text-decoration: none;
+    color: rgb(100, 200, 0);
+    border-left: none;
     border-right: 2px solid white;
 }
 
