--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,8 @@
 
 <div id="main">
   <div id="header">
-    <h1>Clicker Game V2 Beta</h1>
+    <img src="./cg2logo.png" draggable="false">
+    <h1>Clicker Game 2.0</h1>
     <p>
       Welcome, player. You have a retail bussines where you sell all kinds of
       stuff. From car parts and tech to books, clothes, trips etc. Your goal is
@@ -97,7 +98,7 @@
     </p>
 
     <button onclick="buy('PhoneStores');" id="phoneStoresButton" disabled>
-      Buy Phone store
+      Buy phone store
     </button>
   </div>
 
